sidebar: Add per-app sidebar auto-enable feature
- Added SidebarMonitorService to monitor foreground apps and toggle sidebar based on per-app settings
- Created ForegroundAppDetector utility to identify the current foreground app
- Updated BootReceiver to start SidebarMonitorService on boot when auto-enable switch is enable
- Extended SidebarSettingsPage with auto-enable toggle and per-app config navigation

This allows users to select specific apps that automatically trigger the sidebar,
enhancing user experience with context-aware sidebar activation.

Signed-off-by: kenway214 <kenway214@outlook.com>

--- a/sidebar/app/src/main/res/values/strings.xml
+++ b/sidebar/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="sidebar_settings_description">Open sidebar settings</string>
     <string name="sidebar_predicted_apps">Show app suggestions</string>
     <string name="sidebar_predicted_apps_summary">Show upto 6 suggested apps below pinned apps</string>
+    <string name="sidebar_auto_enable_selected_apps">Auto enable sidebar for selected apps</string>
+    <string name="sidebar_auto_enable_selected_apps_summary">Automatically show sidebar when configured apps are launched</string>
+    <string name="sidebar_per_app_config">Configure apps</string>
+    <string name="sidebar_per_app_config_summary">Select apps that should automatically enable sidebar</string>
 </resources>
